[package]
name = "corelab-rust"
version = "0.1.0"
edition = "2021"

# Map the main entry point only. 
# Helper files (like 0002_utils.rs) do NOT need a [[bin]] entry.
[[bin]]
name = "0001_hello_world"
path = "0001_hello_world.rs"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
